[package]
name = "abilists"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = "1.1.3"
arrayvec = "0.7.2"
ascii = "1.0.0"
eio = "0.1.2"
log = "0.4.14"
thiserror = "1.0.30"

# TODO: Move to `dev-dependencies`
color-eyre = "0.6.0"

[dev-dependencies]
clap = { version = "3.0.14", features = ["derive"] }
env_logger = "0.9.0"
format = "0.2.4"
insta = "1.12.0"
